--- a/style.css
+++ b/style.css
@@ -1,9 +1,38 @@
+html {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+}
+
+h1 {
+  text-align: center;
+}
+
+#container {
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  background-color: #333;
+  height: 100%;
+}
+
 button.square {
   width: 50px;
   height: 50px;
   margin: 2px;
   padding: 0;
   border: none;
+  font-size: larger;
 }
 
 .board-row {
